| Summary: | ASTERISK-25984: res_odbc relies on res_odbc_transaction, but it's not mandatory to compile it | ||
| Reporter: | József Dudás (j.dudas) | Labels: | |
| Date Opened: | 2016-05-03 09:21:34 | Date Closed: | 2016-08-19 15:55:09 |
| Priority: | Trivial | Regression? | No |
| Status: | Closed/Complete | Components: | Functions/func_odbc Resources/res_odbc |
| Versions: | 13.8.2 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | You can compile asterisk res_odbc without compiling res_odbc_transaction, but then module will fail to load, because it seems it relies on it.
Error: /usr/lib/asterisk/modules/func_odbc.so: undefined symbol: ast_odbc_retrieve_transaction_obj So dependency (at least in menuselect) is not correct, if you select res_odbc, it should mark res_odbc_transacton as mandatory as well. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2016-05-03 09:21:35.508-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: József Dudás (j.dudas) 2016-06-10 02:56:01.240-0500 Any update on this? By: Joshua C. Colp (jcolp) 2016-06-10 05:07:29.603-0500 Any updates will be posted on this issue. Since there's been nothing, there are no updates. | ||