res/res_odbc_transaction.c
@@ -26,7 +26,6 @@
 #include "asterisk/module.h"
 
 /*** MODULEINFO
-	<depend>res_odbc</depend>
 	<support_level>core</support_level>
  ***/
 
